# TalkWithDoc

./: .gitignore  README.md  pyproject.toml  requirements.txt
research/: QA_with_Langchain_AND_GPT4All.ipynb
talk_with_doc/: app.py  html_templates.py
talk_with_doc/components/: conversation_chain.py  html_templates.py  paths.py  sidebar.py  vectorstore.py
