[tool.poetry]
name = "talkwithdoc"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.345"
streamlit = "^1.29.0"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.0"
faiss-cpu = "^1.7.4"
openai = "^1.3.7"
huggingface-hub = "^0.19.4"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
